modules/grammars/ide/src/test/resources/cocos/valid/AtLeastOneTask.ide
package valid

typedef configuration AtLeastOneTask {
    backend task main
}
