modules/grammars/ide/src/test/resources/cocos/invalid/AtLeastOneTask.ide
package invalid

typedef configuration AtLeastOneTask {

}
